# src/api/schemas/index.ts
@@ -18,7 +18,7 @@ export * from './pedido';
 export * from './pedidoApiListarMisPedidosHechosParams';
 export * from './pedidoApiListarMisPedidosRecibidosParams';
 export * from './pedidoApiListarPedidosParams';
-export * from './pedidoApiListarProductosPedidoParams';
+export * from './pedidoApiListarProductosPedidoPorProveedorParams';
 export * from './pedidoCambiarEstado';
 export * from './pedidoCambiarEstadoEstado';
 export * from './pedidoCreate';
@@ -26,6 +26,7 @@ export * from './pedidoCreateEstado';
 export * from './pedidoDetalle';
 export * from './pedidoDetalleCreate';
 export * from './pedidoDetalleUpdate';
+export * from './pedidoProveedorResumen';
 export * from './pedidoUpdate';
 export * from './productoApiActualizarProductoBody';
 export * from './productoApiCrearProductoBody';
